# Phone_indexer

./: README.md  devenv.nix  main.py  pyproject.toml  requirements.txt
