[tool.poetry]
name = "phone-indexer"
version = "0.1.0"
description = "tarea"
authors = ["dennkaii <githubdennkaii.q3i49@simplelogin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.3"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
